--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "googleapis": "^160.0.0",
     "input-otp": "1.4.1",
     "jsonrepair": "^3.13.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "latest",
