--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ GOOGLE_CLIENT_ID="540618209349-u8ne0a2r9gjtq5m36pt82mq4k4o3b3v5.apps.googleuserc
 GOOGLE_CLIENT_SECRET="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"
 GOOGLE_REDIRECT_URI="http://localhost:3000/api/auth/google-drive/callback"
 
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="https://d45d19fbb90d.ngrok-free.app/"
 NEXTAUTH_SECRET="ksRrZaNJGjBd1o6qGRwTgNcAkQwDD6K5EzUqEMbrLmo="
